--- a/rock-verify/pom.xml
+++ b/rock-verify/pom.xml
@@ -60,6 +60,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-redis</artifactId>
+            <version>1.4.1.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -320,8 +325,6 @@
         </dependency>
 
     </dependencies>
-
-
 
 
     <build>
