--- a/rock-verify/src/main/resources/application.properties
+++ b/rock-verify/src/main/resources/application.properties
@@ -48,3 +48,15 @@ pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
+
+############################################################
+#
+# redis 配置
+#
+############################################################
+spring.redis.host=192.168.1.224
+#Redis服务器连接端口
+spring.redis.port=6379
+#Redis服务器连接密码（默认为空）
+spring.redis.password=
+
