--- a/rock-verify/src/main/resources/rockConfig.properties
+++ b/rock-verify/src/main/resources/rockConfig.properties
@@ -6,3 +6,6 @@
 rock.verify.kafka.servers=s103:9092
 rock.verify.kafka.batch.size=1
 rock.verify.kafka.topic=test
+
+# 将数据同步到 redis 的调度时间
+rock.scheduled.time=3000
