--- a/flink-mock-data/src/main/resources/config.properties
+++ b/flink-mock-data/src/main/resources/config.properties
@@ -1,5 +1,6 @@
-kafka.servers = kafka-1:19092,kafka-2:19092,kafka-3:19092
-kafka.batch.size = 1000001
+#kafka.servers = kafka-1:19092,kafka-2:19092,kafka-3:19092
+kafka.servers = zorkdata-95:9092
+kafka.batch.size = 1
 
-log.size = 1000
-log.topic=xiesen
+log.size = 10000
+log.topic=flinkx
